# roger-server

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
roger_server/: Caddyfile  DEPLOY.md  Dockerfile  __init__.py  __main__.py  aggregate.py  app.py  delta.py  secure_agg.py  store.py
tests/: test_server.py
